Sort body width issue on narrow mobile devices.

--- a/_includes/css/agency.css
+++ b/_includes/css/agency.css
@@ -10,6 +10,10 @@ body {
     color: #{{ site.data.template.color.secondary-dark }};
 }
 
+.page-wrapper {
+    overflow-x: hidden;
+}
+
 .text-muted {
     color: #{{ site.data.template.color.muted }};
 }
